# Trivia-API

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  ext.py
app/auth/: login.py
app/models/: __init__.py  questions_models.py  scores_models.py  users_model.py
app/routes/: auth.py  questions.py  score.py  user.py  users.py
app/services/: questions_services.py  score_services.py  users_services.py
